--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-force-graph-3d": "^1.26.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "socket.io": "^4.8.1",
